# SheepClip

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/superpowers/plans/: 2026-06-17-theme-menu.md
docs/superpowers/specs/: 2026-06-17-theme-menu-design.md
scripts/: publish-release.ps1
src/: App.vue  Floating.vue  main.ts  styles.css  theme.test.mjs  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: commands.ts  windowSize.ts
