[package]
name = "sheepclip"
version = "0.18.0"
description = "SheepClip intelligent clipboard and fast input assistant"
authors = ["SheepClip"]
edition = "2021"

[lib]
name = "sheepclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = "3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clipboard-win = "5"
enigo = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
rdev = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "1"
winapi = { version = "0.3", features = ["errhandlingapi", "handleapi", "processthreadsapi", "psapi", "shellapi", "synchapi", "winbase", "winerror", "winnt", "winuser"] }
